# hora-proa

./: .gitignore  .gitmodules  CMakeLists.txt  HoraProA.pro  README.md  android_build.py  build-android.py  horaproa.rc
android/: AndroidManifest.xml
src/: data.cpp  data.h  main.cpp  planilladb.cpp  planilladb.h
src/qml/: Grilla.qml  MateriaCard.qml  MaterialColorButton.qml  Materias.qml  Modulo.qml  ModuloCell.qml  icons.js  main.qml  qml.qrc  tools.js
src/qml/Schedule/: Modulo.qml  Schedule.qml
